syntax = "proto3";

package routine;

option go_package = "github.com/flavioesteves/wizer-app/broker/proto/routine";

import "google/protobuf/empty.proto";

import "exercise.proto";

message Routine {
  string id = 1;
  string name = 2;
  string profile_id = 3;
  repeated exercise.Exercise exercises = 4;

  string created_by = 5;
  string updated_by = 6;
  string created_at = 7;
  string updated_at = 8;
}

message CreateRoutineRequest {
  Routine routine = 1;
}

message GetRoutineRequest {
  string  id = 1;
}

message UpdateRoutineRequest {
  Routine routine = 1;
}

message DeleteRoutineRequest {
  string id = 1;
}

message GetAllRoutinesRequest {
// Potential parameters for filtering, pagination
}

message GetAllRoutinesResponse {
  repeated Routine routines = 1;
}

message RoutineResponse {
  Routine routine = 1;
}

service RoutineService {
  rpc CreateRoutine (CreateRoutineRequest) returns (RoutineResponse);
  rpc GetRoutine (GetRoutineRequest) returns (RoutineResponse);
  rpc UpdateRoutine (UpdateRoutineRequest) returns (RoutineResponse);
  rpc DeleteRoutine (DeleteRoutineRequest) returns (google.protobuf.Empty);
  rpc GetAllRoutines (GetAllRoutinesRequest) returns (GetAllRoutinesResponse);
}
